# etl_piplines

./: README.md
discourse/: .gitignore  pyproject.toml
discourse/discourse/: discouse_dag.py  main.py
discourse/discourse/sql/_generic/: tables.sql
discourse/tests/: test.py  test_discourse.py
discourse/tests/samples/: categories.json  category_topics.json  directory_items.json  groups.json  notifications.json  posts_latest.json  posts_single.json  posts_single_11313.json  posts_single_8672.json  posts_single_replies.json  search_results.json  search_results_p1.json  search_results_p2.json  site.json  tag_topics.json  tags.json  topics_latest.json  topics_latest_p1.json  topics_latest_p2.json  topics_latest_p20.json  topics_single.json  topics_single_3661.json  user.json
snapshot/: snapshot_proposal_bankless_snapshot_header_1_weekly.py
